infra/k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: frontend
  labels:
    project: upbank-lab
    app: nginx
    environment: prod
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
