infra/k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: frontend
  labels:
    project: upbank-lab
    app: nginx
    environment: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-2:097922957316:certificate/84f21c6e-f30c-4520-b530-0cde65ae1410"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nginx-svc
               port:
                 number: 80
